# viper-mpv-android

./: LICENSE  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/io/viper/android/mpv/demo/: ExampleInstrumentedTest.kt
app/src/androidTest/java/io/viper/android/mpv/player/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/io/viper/android/mpv/demo/: MainActivity.kt
app/src/main/java/io/viper/android/mpv/player/: BackgroundPlaybackService.kt  Extensions.kt  HandlerEventObserver.kt  MainActivity.kt  MainFragment.kt  MainScreenFragment.kt  NavigationPath.kt  NotificationButtonReceiver.kt  PlayerActivity.kt  PlayerApp.kt  SettingsActivity.kt  SettingsFragment.kt  ToastUtils.kt
app/src/main/res/drawable/: ic_file_open_white_48dp.xml  ic_folder_open_white_48dp.xml  toast_background.xml
app/src/main/res/layout/: activity_main.xml  activity_player.xml  fragment_main.xml  fragment_main_screen.xml  toast_view.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: pref_advanced.xml  pref_general.xml  pref_video.xml  preferences.xml
app/src/test/java/io/viper/android/mpv/demo/: ExampleUnitTest.kt
app/src/test/java/io/viper/android/mpv/player/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
mpv-view/: build.gradle.kts  gradle.properties
mpv-view/src/androidTest/java/io/viper/android/mpv/view/: ExampleInstrumentedTest.kt
mpv-view/src/main/cpp/: CMakeLists.txt  jni_utils.cpp  jni_utils.h
mpv-view/src/main/java/io/viper/android/mpv/: Extensions.kt  IPlayer.kt  IPlayerDelegate.kt  IPlayerHandler.kt  NativeLibrary.kt  OverlayAdapter.kt  PlayerAdapter.kt
mpv-view/src/main/java/io/viper/android/mpv/core/: AudioMetadata.kt  PlaybackStateCache.kt  Player.kt  TrackDelegate.kt
mpv-view/src/main/java/io/viper/android/mpv/dialog/: DecimalPickerDialog.kt  IPickerDialog.kt  PlaylistDialog.kt  SliderPickerDialog.kt  SpeedPickerDialog.kt  SubTrackDialog.kt
mpv-view/src/main/java/io/viper/android/mpv/hud/: GestureDelegate.kt  HudContainer.kt  ScreenConfig.kt  TouchConfig.kt
mpv-view/src/main/java/io/viper/android/mpv/renderer/: AndroidSurfaceView.kt
mpv-view/src/main/res/layout/: dialog_advanced_menu.xml  dialog_top_menu.xml  hud_container.xml
mpv-view/src/main/res/values/: arrays.xml  colors.xml  strings.xml
native-libs/: .gitignore  README.md  build.gradle.kts  gradle.properties
(+6 files in other folders)
